# vocab-expansion

./: README.md  pyproject.toml
examples/: qwen3_fft.py
src/adaptivocab_expand/: __init__.py  api.py  cli.py  config.py  init.py  special_tokens.py  utils.py  verify.py
tests/: test_softmax_weights.py
